--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-"dependencies": {
+  "dependencies": {
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
@@ -24,14 +24,14 @@
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
-  
-    },
- "devDependencies": {
+  },
+  "devDependencies": {
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "prettier": "^2.1.2"
-  }
-
-
-
+  },
+  "bugs": {
+    "url": "https://github.com/Dale2k/food_for_thought/issues"
+  },
+  "homepage": "https://github.com/Dale2k/food_for_thought#readme"
 }
