--- a/seeds/{ } projectData.json
+++ b/seeds/{ } projectData.json
@@ -1,23 +1,40 @@
 [
     {
-      
-      "name": "Lasagna",
+      "dish_name": "Lasagna",
       "description": "meat sauce and meat and cheese",
-      "price": "19.99"
-      
-      
+      "price": "15.99",
+      "rating" : "5",
+      "guest_name" : "Sam"
+
     },
     {
-    "name": "Pizza",
+      "dish_name": "Pizza",
       "description": "meat sauce and meat and cheese",
-      "price": "6.99"
-      
+      "price": "12.99",
+       "rating" : "4",
+      "guest_name" : "Joe"
     },
     {
-     "name": "Lemon ice",
+     "dish_name": "Lemon ice",
       "description": "Cool refreshing",
-      "price": "1.99"
-      
+      "price": "3.99",
+      "rating" : "3",
+      "guest_name" : "Stacie"
+    },
+    {
+     "dish_name": "Rigatoni",
+      "description": "Thick noodles",
+      "price": "8.99",
+      "rating" : "2",
+      "guest_name" : "Robert"
+    },
+    {
+     "dish_name": "Calamari",
+      "description": "a little fishy",
+      "price": "0.99",
+      "rating" : "1",
+      "guest_name" : "Sana"
     }
+
   ]
   
